[package]
name = "ternoa-primitives"
version = "0.2.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
frame-system = { git = "https://github.com/paritytech/substrate/", default-features = false }
serde = { version = "1.0.125", optional = true }
sp-application-crypto = { git = "https://github.com/paritytech/substrate/", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate/", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate/", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate/", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"serde",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
    "sp-std/std",
]
