[package]
name = "ternoa-primitives"
version = "0.2.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.2.0" }
serde = { optional = true, version = "1.0.126" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"serde",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
    "sp-std/std",
]
