[package]
name = "ternoa-runtime"
version = "0.2.0"
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ternoa-account-store = { default-features = false, path = "../pallets/account-store" }
ternoa-marketplace = { default-features = false, path = "../pallets/marketplace" }
ternoa-timed-escrow = { default-features = false, path = "../pallets/timed-escrow" }
ternoa-sgx = { default-features = false, path = "../pallets/sgx" }
ternoa-nfts = { default-features = false, path = "../pallets/nfts" }
ternoa-primitives = { default-features = false, path = "../primitives" }
static_assertions = { version = "1.1.0" }
serde = { optional = true, version = "1.0.126" }
hex-literal = { optional = true, version = "0.3.1" }
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.2.0" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, version = "4.0.0-dev" }
frame-executive = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, version = "4.0.0-dev" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-babe = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-bounties = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-collective = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-curveless-staking = { git = "https://github.com/markopoloparadox/pallet-curveless-staking", default-features = false, tag = "0.1.1" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-mandate = { git = "https://github.com/ETeissonniere/pallet-mandate", branch = "eliott/ternoa-sub-freeze", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-offences = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
#pallet-offences-benchmarking = { git = "https://github.com/paritytech/substrate/", default-features = false, optional = true }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", features = ["historical"], default-features = false, version = "4.0.0-dev" }
#pallet-session-benchmarking = { git = "https://github.com/paritytech/substrate/",  default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-treasury = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-api = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "0.10.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-session = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-version = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", version = "5.0.0-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-collective/std",
	"pallet-curveless-staking/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-mandate/std",
	"pallet-membership/std",
	"pallet-offences/std",
	"pallet-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"serde",
	"sp-api/std",
	"sp-authority-discovery/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-tracing/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"ternoa-account-store/std",
	"ternoa-marketplace/std",
	"ternoa-nfts/std",
	"ternoa-primitives/std",
	"ternoa-timed-escrow/std",
	"ternoa-sgx/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-curveless-staking/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	#"pallet-offences-benchmarking",
	"pallet-scheduler/runtime-benchmarks",
	#"pallet-session-benchmarking",
	"pallet-treasury/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"ternoa-nfts/runtime-benchmarks",
	"ternoa-timed-escrow/runtime-benchmarks",
	"ternoa-marketplace/runtime-benchmarks",
	"ternoa-sgx/runtime-benchmarks",
]
